<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lunch"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_lunch"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/menu_logout"/>
        <item
            android:id="@+id/nav_mapview"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_mapview" />
        <item
            android:id="@+id/nav_listview"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/menu_listview" />
        <item
            android:id="@+id/nav_workmates"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_workmates" />
    </group>
</menu>