<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegisterActivity"
    android:background="@drawable/bg">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sign_in_textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/activity_register_title"
                android:textColor="@color/white"
                android:textSize="68sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/sign_in_edittext_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:padding="8dp"
                android:ems="10"
                android:hint="@string/activity_register_email"
                android:autofillHints="emailAddress"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#20FFFFFF"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_textview_title" />

            <EditText
                android:id="@+id/sign_in_edittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:padding="8dp"
                android:ems="10"
                android:hint="@string/activity_register_name"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/white"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#20FFFFFF"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_edittext_mail" />

            <EditText
                android:id="@+id/sign_in_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:padding="8dp"
                android:ems="10"
                android:hint="@string/activity_register_password"
                android:autofillHints="password"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#20FFFFFF"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_edittext_name" />

            <EditText
                android:id="@+id/sign_in_edittext_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:padding="8dp"
                android:ems="10"
                android:hint="@string/activity_register_confirm_password"
                android:autofillHints="password"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#20FFFFFF"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_edittext_password" />

            <Button
                android:id="@+id/sign_in_button_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="8dp"
                android:text="@string/activity_register_button"
                android:background="@drawable/edit_text_background"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_edittext_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sign_in_textview_existing_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/activity_register_have_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@id/sign_in_button_register"
                app:layout_constraintEnd_toEndOf="@+id/sign_in_button_register"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button_register" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>